# SpatialSablefishAssessment

./: .Rbuildignore  .gitignore  404.html  BuildPackage.R  DESCRIPTION  NAMESPACE  README.md  TagIntegrated.html  TagIntegratedEq.html  a-list-of-functions-available-in-the-spatialsablefishassessment-package.html  adding-unit-tests.html  assessment-data-and-parameter-descriptions.html  contributing-to-spatialsablefishassessment.html  functionlist.html  how-to-use-spatialsablefishassessment-in-a-mse.html  how-to-use-spatialsablefishassessment.html  how-to-use-the-spatialsablefishassessment-r-package.html  index.html  reference-keys.txt  references.html  search_index.json  tagintegrated-data-and-parameter-descriptions.html  tagintegrated-model-equations.html
GitBook/: 01-ListOfKeyFunctionsWithDescription.Rmd  02-TagIntegratedInputs.Rmd  02-UsePackage.Rmd  03-TagIntegratedModel.Rmd  04-TagIntegratedInputs.Rmd  05-AssessmentInputs.Rmd  06-MSE.Rmd  08-UnitTests.Rmd  09-BuildingPackage.Rmd  _output.yml  book.bib  index.Rmd  packages.bib
R/: BookdownFunctions.R  DataGroomingCode.R  DerivedQuantityFunctions.R  Distributions.R  EstimationFunctions.R  InputFunctions.R  MSE_functions.R  ModelInputValidation.R  ObservationFunctions.R  PartitionFunctions.R  ProjectionFunction.R  Selectivities.R  SpatialSablefishAssessment-package.R  TagFunctions.R  UtilityFunctions.R  VAlignPlots.R  multiple_model_run_comparions.R
inst/: REFERENCES.bib
man/: BH.Rd  Francis_reweighting.Rd  Q_sum_to_zero_QR.Rd  VAlignPlots.Rd  bound_unit.Rd  (+148 more)
tests/gtest/: CMakeLists.txt  dmultinom_upd-unit.cpp
(+42 files in other folders)
